# Hackathon-II-Phase-2

./: .gitignore  .vercelignore  BACKEND_AUDIT.md  CLAUDE.md  CONSTITUTION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.txt  GEMINI.md  PROJECT_OVERVIEW.md  README.md  SETUP_NEON.md  cleanup_db.py  pyproject.toml  run_server.py  setup.py  vercel-build.sh  vercel.json
.spec-kit/: config.yaml
api/: .vc-config.json  index.py  python-config.json
backend/: .env.example  main.py
frontend/: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  DARK_THEME_IMPLEMENTATION.md  DESIGN_SYSTEM.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/components/layout/: Layout.tsx  Navbar.tsx
frontend/components/shared/: Button.tsx  Card.tsx  ConfirmDialog.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  Textarea.tsx  Toast.tsx  index.ts
frontend/components/tasks/: TaskFilters.tsx  TaskForm.tsx  (+3 more)
frontend/lib/: api.ts  hooks.ts  types.ts  utils.ts  validation.ts
specs/: architecture.md  overview.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  task-crud.md
specs/phase1-console/: plan.md  spec.md  tasks.md
specs/phase2-web/: architecture.md  overview.md
specs/ui/: components.md  pages.md
tests/: test_services.py
(+12 files in other folders)
