[project]
name = "hackathon-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy",
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "psycopg2-binary",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
]

[tool.poetry]
packages = [{include = "backend"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
